src/objects/CKW__c.object
<CustomObject>
    <description>Profile of CKWs</description>
    <fields>
        <fullName>Active_Date__c</fullName>
        <description>The date that the ckw passed their training</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternative_Contact_Number__c</fullName>
        <description>A phone number that is not the CKW phone</description>
        <inlineHelpText>Please add a number that we can use to contact the CKW if they lose their CKW provided phone</inlineHelpText>
        <label>Alternative Contact Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_On__c</fullName>
        <description>The date charger was assigned to the CKW</description>
        <label>Assigned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attitude__c</fullName>
        <description>CKW attitude during training</description>
        <inlineHelpText>CKW attitude during training</inlineHelpText>
        <label>Attitude</label>
        <picklist>
            <picklistValues>
                <fullName>Spectator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CKW_Rank__c</fullName>
        <inlineHelpText>Set skill level of CKW</inlineHelpText>
        <label>CKW Rank</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super CKW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CKW_Type__c</fullName>
        <description>Does this CKW object represent an active CKW (which will show up in reports), or a &apos;fake&apos; account, of whick there are a few types (CKW-in-training, demo accounts, data collection personnel, and GF Staff)</description>
        <label>CKW Type</label>
        <picklist>
            <picklistValues>
                <fullName>CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF/Applab Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charging_Solution__c</fullName>
        <description>Components availed to the CKW to charge phones</description>
        <inlineHelpText>Components availed to the CKW to charge phones</inlineHelpText>
        <label>Charging Solution Components</label>
        <picklist>
            <picklistValues>
                <fullName>Battery</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Solar charger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mains power charger (UMEME)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comprehension__c</fullName>
        <description>Comprehension of Training Material</description>
        <inlineHelpText>Comprehension of Training Material</inlineHelpText>
        <label>Comprehension</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs more support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Absorption__c</fullName>
        <description>Training content absorption</description>
        <inlineHelpText>Training content absorption</inlineHelpText>
        <label>Content Absorption</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs more support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <inlineHelpText>Select Yes if contract has been signed, or select No if contract has not been signed</inlineHelpText>
        <label>Contract Signed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CKW&apos;s current performance review. Used to generate the message that appears in Pulse&apos;s performance tab.</description>
        <label>Current Performance</label>
        <referenceTo>CKW_Performance_Review__c</referenceTo>
        <relationshipLabel>CKWs</relationshipLabel>
        <relationshipName>CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <description>Any other relevant info regarding the CKW during training</description>
        <inlineHelpText>Any other relevant info regarding the CKW during training</inlineHelpText>
        <label>General Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Dynamics__c</fullName>
        <description>CKW behaviour during training</description>
        <inlineHelpText>CKW behaviour during training</inlineHelpText>
        <label>Group Dynamics</label>
        <picklist>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does better</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_CKW_paid_the_commitment_fee__c</fullName>
        <description>Has CKW paid the commitment fee?</description>
        <inlineHelpText>Select Yes if CKW has paid the commitment fee, and No if the CKW has not paid</inlineHelpText>
        <label>Commitment fee paid?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <formula>Person__r.Mobile_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Profile__c</fullName>
        <description>Text shown in the &quot;Profile&quot; tab of Pulse</description>
        <formula>IF(ISPICKVAL(Person__r.Country__r.Language__c , &quot;Spanish&quot;) ,
&quot;Identificación: &quot; &amp;  Name  &amp;  BR() &amp;

&quot;Nombre: &quot; &amp;  Person__r.First_Name__c &amp; &quot; &quot; &amp;  Person__r.Last_Name__c &amp;  BR() &amp;

&quot;Ubicación: &quot; &amp;  Person__r.Subcounty__r.Name &amp; &quot; , &quot; &amp;  Person__r.Parish__c  &amp; &quot; &quot;&amp;  Person__r.Village__c &amp; &quot; .&quot; &amp; BR() &amp; 
BR()&amp;
&quot;ID del teléfono: &quot; &amp;  Person__r.Handset__r.IMEI__c &amp; BR() &amp;

&quot;Número telefónico: &quot; &amp;  Person__r.Handset__r.SIM__r.Name &amp; BR()&amp;
BR()&amp;

&quot;ATENCION: Si su nombre o número telefónico no son correctos, por favor comuníquese con su líder productor. Adicionalmente puede reportar este problema utilizando la pestaña Soporte. Sus actividades no seran registradas en el sistema si la información es incorrecta.&quot; &amp; BR()
,
&quot;Your ID: &quot; &amp;  Name  &amp;  BR() &amp;

&quot;Your Name: &quot; &amp;  Person__r.First_Name__c &amp; &quot; &quot; &amp;  Person__r.Last_Name__c &amp;  BR() &amp;

&quot;Location: &quot; &amp;  Person__r.Subcounty__r.Name &amp; &quot; , &quot; &amp;  Person__r.Parish__c  &amp; &quot; &quot;&amp;  Person__r.Village__c &amp; &quot; .&quot; &amp; BR() &amp; 
BR()&amp;
&quot;Phone ID: &quot; &amp;  Person__r.Handset__r.IMEI__c &amp; BR() &amp;

&quot;Phone Number: &quot; &amp;  Person__r.Handset__r.SIM__r.Name &amp; BR()&amp;
BR()&amp;

&quot;VERY IMPORTANT: If your name or phone number are not listed correctly, please advise your field co-coordinator or field officer as soon as possible. Alternatively you can report this problem via the Support tab. Your activities will not be recorded in the system if the above information is incorrect.&quot; &amp; BR()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pulse Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Charging_Solution__c</fullName>
        <description>Notes-Charging Solution</description>
        <inlineHelpText>Notes-Charging Solution</inlineHelpText>
        <label>Notes-Charging Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CKWs</relationshipLabel>
        <relationshipName>CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>Parent object with core person details</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>CKW Details</relationshipLabel>
        <relationshipName>CKW_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Poverty_Status__c</fullName>
        <description>CKW Poverty Status</description>
        <label>Poverty Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to last month&apos;s performance review. This is used to generate the payment message that appears in Pulse for the first few days of the month.</description>
        <label>Previous Month&apos;s Performance</label>
        <referenceTo>CKW_Performance_Review__c</referenceTo>
        <relationshipLabel>CKW (Previous Month&apos;s Performance)</relationshipLabel>
        <relationshipName>CKW_Previous_Month</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner or organization who has assigned the CKW</description>
        <inlineHelpText>Select a partner account who has assigned the CKW</inlineHelpText>
        <label>Recruiter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CKWs</relationshipLabel>
        <relationshipName>CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(optional) Secondary recruiting partner for the CKW, e.g. KACOFA</description>
        <label>Secondary Recruiter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CKWs (Secondary Recruiter)</relationshipLabel>
        <relationshipName>CKW_Recruits_as_secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <description>Does the CKW have any special needs?</description>
        <inlineHelpText>Does the CKW have any special needs?</inlineHelpText>
        <label>Special Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of CKW</description>
        <label>CKW Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CKW</label>
    <listViews>
        <fullName>tabitha</fullName>
        <columns>NAME</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Active_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CKWs</label>
    </listViews>
    <nameField>
        <displayFormat>CKW-{YY}-{000000}</displayFormat>
        <label>CKW ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CKWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>